test/spec_vectors/load64/fail/module_34.wat
(module (memory i64 1) (func (result i64) (i64.load8_s (f32.const 0))))